
package br.edu.ifsul.bcc.too.topico4.exercicios.estudocaso_biblioteca.diagramaclasses;

import java.util.Calendar;

/**
 *
 * @author telmo
 */
public class Emprestimo {
    
    //atributos: id, data, data_devolucao
    //data_devolvido, situacao,
    //Funcionario, Aluno e Exemplar.
    private Integer id;
    private Calendar data;
    private Calendar data_devolucao;
    private Calendar data_devolvido;
    private Boolean situacao;
    private Funcionario funcionario;
    private Aluno aluno;
    private Exemplar exemplar;
    
    //construtores
    
    //métodos get e set.
    
}
