
package br.edu.ifsul.bcc.too.topico4.exercicios.estudocaso_biblioteca.diagramaclasses;

/**
 *
 * @author telmo
 */
public class Exemplar {

    //atributos: id, situacao
    //Livro
    private Integer id;
    private Boolean situacao;
    private Livro livro;
    
    //construtores
    
    //métodos get e set.
}
