
package br.edu.ifsul.bcc.too.topico4.exercicios.estudocaso_biblioteca.diagramaclasses;

/**
 *
 * @author telmo
 */
public class PalavrasChave {

    private Integer id;
    private String nome;
    //atributos
    
    //construtores
    
    //metodos get e set.
    
    PalavrasChave(){
        
    }
    
    public PalavrasChave(Integer id, String nome){
        
        this.id = id;
        this.nome = nome;
    }
}
